[project]
name = "tf2mon"
version = "1.0.36"
description = "Team Fortress 2 Console Monitor"
authors = [
    {name = "Russel Lane", email = "russel@rlane.com"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["tf2", "team-fortress-2", "steam", "valve", "bots", "cathook"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: First Person Shooters"
]
requires-python = ">=3.10"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "humanize>=4.1.0",
    "loguru>=0.6.0",
    "python-levenshtein>=0.12.2",
    "rlane-libcli>=1.0.3",
    "rlane-libcurses>=1.0.5",
    "steam!=1.3.3,>=1.3.0",
    "xdg>=5.1.1",
]

[project.urls]
Homepage = "https://github.com/russellane/tf2mon"

[project.scripts]
tf2mon = "tf2mon.cli:main"

[project.optional-dependencies]
[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.3.0",
    "flake8-bugbear>=22.4.25",
    "flake8-pydocstyle>=0.2.0",
    "flake8-pylint>=0.1.3",
    "flake8-pytest-style>=1.6.0",
    "flake8-simplify>=0.19.2",
    "flake8>=4.0.1",
    "icecream>=2.1.2",
    "isort>=5.10.1",
    "pytest-cov>=3.0.0",
    "pytest>=7.1.2",
    "toml>=0.10.2",
]

[tool.black]
line-length = "97"

[tool.isort]
line_length = "97"
profile = "black"

[tool.pylint.format]
max-line-length = "97"

[tool.pylint.messages_control]
enable = ["useless-suppression"]
fail-on = ["I0021"]             # useless-suppression
good-names = [
    "i", "j",
    "k", "v",
    "m",
    "Monitor",
    "me", "my",
    "ui",
]

[tool.pydocstyle]
convention = "google"
add-ignore = [
    "D105",     # pep257 numpy google   # Missing docstring in magic method
    "D202",     # pep257 numpy google   # No blank lines allowed after function docstring
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

# vim: set ts=4 sw=4 et:
